Added a number of Settings for the application and added user logs for when the user logs off at the end of a session.

--- a/Stock Manager/Stock Manager/App.config
+++ b/Stock Manager/Stock Manager/App.config
@@ -1,6 +1,72 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Stock_Manager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <Stock_Manager.Properties.Settings>
+            <setting name="frmAdminPanelSize" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="frmAdminPanelLocation" serializeAs="String">
+                <value>100, 100</value>
+            </setting>
+            <setting name="frmAdminPanelWindowState" serializeAs="String">
+                <value>Normal</value>
+            </setting>
+            <setting name="frmCheckoutSize" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="frmCheckoutLocation" serializeAs="String">
+                <value>100, 100</value>
+            </setting>
+            <setting name="frmChooseSiteSize" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="frmChooseSiteLocation" serializeAs="String">
+                <value>100, 100</value>
+            </setting>
+            <setting name="frmChooseSiteWindowState" serializeAs="String">
+                <value>Normal</value>
+            </setting>
+            <setting name="frmCreateUserSize" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="frmCreateUserLocation" serializeAs="String">
+                <value>100, 100</value>
+            </setting>
+            <setting name="frmCreateUserWindowState" serializeAs="String">
+                <value>Normal</value>
+            </setting>
+            <setting name="frmStandingOrdersSize" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="frmStandingOrdersLocation" serializeAs="String">
+                <value>100, 100</value>
+            </setting>
+            <setting name="frmStandingOrdersWindowState" serializeAs="String">
+                <value>Normal</value>
+            </setting>
+            <setting name="frmViewStocksSize" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="frmViewStocksLocation" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="frmViewStocksWindowState" serializeAs="String">
+                <value>Normal</value>
+            </setting>
+            <setting name="frmCheckoutWindowState" serializeAs="String">
+                <value>Normal</value>
+            </setting>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+        </Stock_Manager.Properties.Settings>
+    </userSettings>
 </configuration>
